# atlas-ai-testops

./: .gitignore  Makefile  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260713_0001_platform_foundation.py  20260713_0002_platform_list_indexes.py  20260713_0003_platform_identity.py  20260713_0004_identity_catalog.py  20260713_0005_account_leases.py  20260713_0006_secret_grants.py  20260713_0007_connector_installations.py  20260713_0008_account_health.py  20260714_0009_browser_session_artifacts.py  20260714_0010_fixture_assets.py  20260714_0011_fixture_runtime.py  20260714_0012_fixture_cleanup_reconcile.py  20260715_0013_case_authoring.py  20260715_0014_debug_runs.py  20260715_0015_case_versions.py  20260715_0016_runtime_evidence.py  20260715_0017_browser_runtime_reports.py  20260715_0018_evidence_read_grants.py  20260716_0019_debug_live_event_hardening.py  20260716_0020_validate_debug_live_events.py  20260716_0021_compact_debug_live_replay_index.py  20260716_0022_task_execution_hosts.py  20260716_0023_task_dispatch_prerequisites.py  20260716_0024_task_workflow_start_intent_delivery.py  20260716_0025_task_orchestration_locks.py  20260716_0026_task_run_query_index.py  20260717_0027_task_unit_execution_tickets.py  20260717_0028_task_run_command_intents.py  20260717_0029_task_run_pause_resume.py  20260717_0030_task_infrastructure_retry.py  20260717_0031_task_infra_failure_rerun.py  20260718_0032_attempt_seal_result_fact.py  20260718_0033_unit_result_resolution.py  20260718_0034_task_result_snapshot.py  20260718_0035_task_fixture_hygiene_truth.py  20260718_0036_task_result_fully_resolved.py  20260718_0037_task_result_reevaluation.py  20260718_0038_failure_classification.py  20260718_0039_task_gate_decision.py  20260718_0040_insight_snapshots.py  (+6 more)
backend/scripts/: __init__.py  export_contracts.py  export_openapi.py  run_p9_acceptance.py  seed_local_examples.py
backend/src/atlas_testops/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py
backend/tests/acceptance/: __init__.py  test_p9_capacity.py
backend/tests/api/: test_auth_session_api.py  test_browser_runtime_api.py  test_evidence_api.py  test_health.py  test_insights_api.py  test_live_control_api.py  test_live_sse.py  test_platform_security.py  test_problem_details.py  test_results_api.py  test_task_plans_api.py  test_task_runs_api.py  test_task_schedules_api.py
backend/tests/application/: test_access.py  test_account_health.py  test_browser_execution.py  test_debug_runtime_protocol.py  test_evidence.py  test_insights.py  test_live.py  test_result_callback_delivery.py  test_result_classification.py  (+19 more)
(+618 files in other folders)
