[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "atlas-testops-backend"
version = "0.1.0"
description = "Backend service for the Atlas AI TestOps platform"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.139,<0.140",
  "pydantic-settings>=2.14,<3",
  "uvicorn[standard]>=0.51,<0.52",
]

[dependency-groups]
dev = [
  "httpx2>=2.5,<3",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_testops"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=atlas_testops",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["atlas_testops"]
